# ads1220

./: Cargo.toml  README.md
examples/rp-pico/: Cargo.toml  README.md
examples/rp-pico-2/: Cargo.toml
examples/rp-pico-2/.cargo/: config.toml
examples/rp-pico-2/src/: main.rs
examples/rp-pico/.cargo/: config.toml
examples/rp-pico/src/: main.rs
src/: lib.rs  registers.rs
