[package]
name = "ads1220"
version = "0.1.0"
edition = "2024"
description = "Rust driver for the TI ADS1220 Delta-Sigma Analog-to-Digital converter"
authors = ["Adrian Wowk <adrian@adom.inc>"]
license = "MIT"

[dependencies]
embedded-hal = "1.0.0"
bitfield = "0.19.1"
num_enum = { version = "0.7.4", default-features = false }
paste = "1.0.15"

defmt = { version = "1.0.1", optional = true }
embedded-hal-async = { version = "1.0.0", optional = true }

[features]
default = []

defmt = ["dep:defmt", "embedded-hal/defmt-03"]
embedded-hal-async = ["dep:embedded-hal-async"]
