[package]
name = "ads1220-rp-pico"
version = "0.1.0"
edition = "2024"
authors = ["Adrian Wowk <adrian@adom.inc>"]
license = "MIT"

[dependencies]
ads1220 = { path = "../../", features = ["defmt"] }

cortex-m = "0.7"
cortex-m-rt = "0.7.5"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embedded-hal = { version = "1.0.0" }
fugit = "0.3.6"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
rp-pico = "0.9"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false